--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,7 @@ a,a:hover
     position: relative;
     z-index: 1;
     overflow: hidden;
-    transition: all 0.3s ease;ㄴ
+    transition: all 0.3s ease;
 }
 .service-item:hover
 {
