--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ a,a:hover
 {
     margin: 0;
     padding: 0;
-    height: 1200px;
+    height: 1000px;
 }
 .banner
 {
@@ -215,27 +215,28 @@ a,a:hover
 }
 .banner .content
 {
-    position: relative;
+    height: auto;
     z-index: 1;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: 0;
     text-align: center;
 }
 .banner .content h1
 {
     font-weight: bold;
     margin: 0;
-    padding: 0;
-    font-size: 4.5em;
+    padding-top: 100px;
+    font-size: 50px;
     text-transform: uppercase;
     color: white;
+    max-height: max-content;
 }
 .banner .content h2
 {
     font-weight: bold;
     margin: 0;
     padding: 0;
-    font-size: 8em;
+    font-size: 70px;
     text-transform: uppercase;
     color: white;
 }
@@ -243,7 +244,7 @@ a,a:hover
 {
     font-weight: bold;
     content: "하나의 별이";
-    animation: animate 7s infinite;
+    animation: animate 8s infinite;
 }
 @keyframes animate
 {
@@ -254,7 +255,7 @@ a,a:hover
     }
     25%
     {
-        font-size: 87%;
+        font-size: 90%;
         opacity: 0;
     }
     50%
@@ -264,7 +265,7 @@ a,a:hover
     }
     65%
     {
-        font-size: 87%;
+        font-size: 90%;
         opacity: 0;
     }
     80%
@@ -290,7 +291,7 @@ a,a:hover
     font-weight: bold;
     margin: 0;
     padding: 0;
-    font-size: 4.5em;
+    font-size: 50px;
     text-transform: uppercase;
     color: white;
 }
@@ -687,7 +688,8 @@ a,a:hover
 .video-container .main-video-container .main-video{
     margin-bottom: 7px;
     border-radius: 5px;
-    width: 100%;
+    height: 500px;
+    width: 800px;
 }
 
 .video-container .main-video-container .main-vid-title{
